base/nginx-ingress/ingress.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    # nginx.ingress.kubernetes.io/server-snippet: |
    #   location = /favicon.ico {
    #     empty_gif;
    #     access_log off;
    #     log_not_found off;
    #   }
    #   location = /nginx_status {
    #     stub_status on;
    #     access_log off;
    #     log_not_found off;
    #   }
    #   location = /apple-app-site-association {
    #     access_log off;
    #     log_not_found off;
    #   }
    #   location = /.well-known/apple-app-site-association {
    #     access_log off;
    #     log_not_found off;
    #   }
